# sonica

./: README.md  meson.build
example-config/: enb_nb.conf  epc.conf  rr_nb.conf  sib_nb.conf
include/: meson.build
include/sonica/: build_info.h.in  config.h  meson.build  sonica.h  version.h.in
include/sonica/nbiot_enb/: enb_dl_nbiot.h  enb_ul_nbiot.h
include/sonica/nbiot_phch/: nprach.h  npusch.h  nulsch.h
include/sonica_enb/hdr/: enb_nb.h  parser.h
include/sonica_enb/hdr/phy/: nprach_worker.h  phy.h  phy_common.h  phy_interfaces.h  sf_worker.h  txrx.h
include/sonica_enb/hdr/stack/: enb_stack_base.h  enb_stack_nb.h
include/sonica_enb/hdr/stack/mac/: mac.h  scheduler.h  scheduler_carrier.h  scheduler_common.h  scheduler_grid.h  scheduler_harq.h  scheduler_metric.h  scheduler_ue.h  ta.h  ue.h
include/sonica_enb/hdr/stack/rrc/: rrc.h  rrc_config.h  rrc_metrics.h
include/sonica_enb/hdr/stack/upper/: common_enb.h  pdcp.h  rlc.h  s1ap.h  s1ap_metrics.h
scripts/: get_gitbranch.sh  get_gitrev.sh
sonica_enb/: enb_cfg_parser.cc  enb_cfg_parser.h  enb_nb.cc  main.cc  meson.build  parser.cc
sonica_enb/phy/: meson.build  nprach_worker.cc  phy.cc  phy_common.cc  sf_worker.cc  txrx.cc
sonica_enb/stack/: enb_stack_nb.cc  meson.build
sonica_enb/stack/mac/: mac.cc  meson.build  scheduler.cc  scheduler_carrier.cc  scheduler_grid.cc  scheduler_ue.cc  ue.cc
sonica_enb/stack/rrc/: meson.build  rrc.cc
sonica_enb/stack/upper/: meson.build  pdcp.cc  rlc.cc  s1ap.cc
src/: meson.build
src/apps/: meson.build
src/apps/framework/: meson.build  nb_basic.cc  nb_ul_decode.cc  nbframework.cc  nbframework.h
src/common/: meson.build  version.c
src/nbiot_enb/: enb_dl_nbiot.c  enb_ul_nbiot.c  meson.build
src/nbiot_phch/: meson.build  nprach.c  npusch.c  nulsch.c
